src/main/gen/org/intellij/sdk/language/sml/parser/SmlParser.java
// This is a generated file. Not intended for manual editing.
package org.intellij.sdk.language.sml.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static org.intellij.sdk.language.sml.psi.SmlTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class SmlParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return smlFile(b, l + 1);
  }

  /* ********************************************************** */
  // ALARM separator eventsDefinition beginBlock instructions* endBlock
  public static boolean alarmBlock(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "alarmBlock")) return false;
    if (!nextTokenIs(b, ALARM)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ALARM_BLOCK, null);
    r = consumeToken(b, ALARM);
    p = r; // pin = 1
    r = r && report_error_(b, separator(b, l + 1));
    r = p && report_error_(b, eventsDefinition(b, l + 1)) && r;
    r = p && report_error_(b, beginBlock(b, l + 1)) && r;
    r = p && report_error_(b, alarmBlock_4(b, l + 1)) && r;
    r = p && endBlock(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // instructions*
  private static boolean alarmBlock_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "alarmBlock_4")) return false;
    while (true) {
      int c = current_position_(b);
      if (!instructions(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "alarmBlock_4", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // ALIAS separator aliasName beginBlock aliasBlockBody endBlock
  public static boolean aliasBlock(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "aliasBlock")) return false;
    if (!nextTokenIs(b, ALIAS)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ALIAS_BLOCK, null);
    r = consumeToken(b, ALIAS);
    p = r; // pin = 1
    r = r && report_error_(b, separator(b, l + 1));
    r = p && report_error_(b, aliasName(b, l + 1)) && r;
    r = p && report_error_(b, beginBlock(b, l + 1)) && r;
    r = p && report_error_(b, aliasBlockBody(b, l + 1)) && r;
    r = p && endBlock(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // EVENT_NAME+
  static boolean aliasBlockBody(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "aliasBlockBody")) return false;
    if (!nextTokenIs(b, "<Events names>", EVENT_NAME)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, null, "<Events names>");
    r = consumeToken(b, EVENT_NAME);
    while (r) {
      int c = current_position_(b);
      if (!consumeToken(b, EVENT_NAME)) break;
      if (!empty_element_parsed_guard_(b, "aliasBlockBody", c)) break;
    }
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // ALIAS_NAME
  static boolean aliasName(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "aliasName")) return false;
    if (!nextTokenIs(b, "<Alias name>", ALIAS_NAME)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, null, "<Alias name>");
    r = consumeToken(b, ALIAS_NAME);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // BEGIN_BLOCK
  static boolean beginBlock(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "beginBlock")) return false;
    if (!nextTokenIs(b, "<Begin block '{' >", BEGIN_BLOCK)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, null, "<Begin block '{' >");
    r = consumeToken(b, BEGIN_BLOCK);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // BIND_NAME BINDS_SEPARATOR smlVars
  public static boolean bind(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bind")) return false;
    if (!nextTokenIs(b, "<Bindings>", BIND_NAME)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, BIND, "<Bindings>");
    r = consumeTokens(b, 1, BIND_NAME, BINDS_SEPARATOR);
    p = r; // pin = 1
    r = r && smlVars(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // BINDING beginBlock bind+ endBlock
  public static boolean bindingBlock(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bindingBlock")) return false;
    if (!nextTokenIs(b, BINDING)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, BINDING_BLOCK, null);
    r = consumeToken(b, BINDING);
    p = r; // pin = 1
    r = r && report_error_(b, beginBlock(b, l + 1));
    r = p && report_error_(b, bindingBlock_2(b, l + 1)) && r;
    r = p && endBlock(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // bind+
  private static boolean bindingBlock_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bindingBlock_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = bind(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!bind(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "bindingBlock_2", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // BINDS
  static boolean binds(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "binds")) return false;
    if (!nextTokenIs(b, "<Bindings>", BINDS)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, null, "<Bindings>");
    r = consumeToken(b, BINDS);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // CALL JAVA_FUNCTION_CALL
  public static boolean callJavaFunctionInstruction(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "callJavaFunctionInstruction")) return false;
    if (!nextTokenIs(b, CALL)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, CALL_JAVA_FUNCTION_INSTRUCTION, null);
    r = consumeTokens(b, 1, CALL, JAVA_FUNCTION_CALL);
    p = r; // pin = 1
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // CONDITION beginBlock conditions* endBlock
  public static boolean conditionBlock(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conditionBlock")) return false;
    if (!nextTokenIs(b, CONDITION)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, CONDITION_BLOCK, null);
    r = consumeToken(b, CONDITION);
    p = r; // pin = 1
    r = r && report_error_(b, beginBlock(b, l + 1));
    r = p && report_error_(b, conditionBlock_2(b, l + 1)) && r;
    r = p && endBlock(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // conditions*
  private static boolean conditionBlock_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conditionBlock_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!conditions(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "conditionBlock_2", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // (SML_VARS|CONST_CONDS) ((OP_CONDS|COMP_CONDS) (SML_VARS|CONST_CONDS))*
  public static boolean conditions(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conditions")) return false;
    if (!nextTokenIs(b, "<conditions>", CONST_CONDS, SML_VARS)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, CONDITIONS, "<conditions>");
    r = conditions_0(b, l + 1);
    p = r; // pin = 1
    r = r && conditions_1(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // SML_VARS|CONST_CONDS
  private static boolean conditions_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conditions_0")) return false;
    boolean r;
    r = consumeToken(b, SML_VARS);
    if (!r) r = consumeToken(b, CONST_CONDS);
    return r;
  }

  // ((OP_CONDS|COMP_CONDS) (SML_VARS|CONST_CONDS))*
  private static boolean conditions_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conditions_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!conditions_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "conditions_1", c)) break;
    }
    return true;
  }

  // (OP_CONDS|COMP_CONDS) (SML_VARS|CONST_CONDS)
  private static boolean conditions_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conditions_1_0")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = conditions_1_0_0(b, l + 1);
    p = r; // pin = 1
    r = r && conditions_1_0_1(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // OP_CONDS|COMP_CONDS
  private static boolean conditions_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conditions_1_0_0")) return false;
    boolean r;
    r = consumeToken(b, OP_CONDS);
    if (!r) r = consumeToken(b, COMP_CONDS);
    return r;
  }

  // SML_VARS|CONST_CONDS
  private static boolean conditions_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conditions_1_0_1")) return false;
    boolean r;
    r = consumeToken(b, SML_VARS);
    if (!r) r = consumeToken(b, CONST_CONDS);
    return r;
  }

  /* ********************************************************** */
  // CONSUME_EVENT
  public static boolean consumeEventInstruction(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "consumeEventInstruction")) return false;
    if (!nextTokenIs(b, CONSUME_EVENT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, CONSUME_EVENT);
    exit_section_(b, m, CONSUME_EVENT_INSTRUCTION, r);
    return r;
  }

  /* ********************************************************** */
  // ELSE beginBlock instructions* endBlock
  public static boolean elseBlock(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "elseBlock")) return false;
    if (!nextTokenIs(b, ELSE)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ELSE_BLOCK, null);
    r = consumeToken(b, ELSE);
    p = r; // pin = 1
    r = r && report_error_(b, beginBlock(b, l + 1));
    r = p && report_error_(b, elseBlock_2(b, l + 1)) && r;
    r = p && endBlock(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // instructions*
  private static boolean elseBlock_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "elseBlock_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!instructions(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "elseBlock_2", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // ELSE_IF ifConditions beginBlock instructions* endBlock
  public static boolean elseIfBlock(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "elseIfBlock")) return false;
    if (!nextTokenIs(b, ELSE_IF)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ELSE_IF_BLOCK, null);
    r = consumeToken(b, ELSE_IF);
    p = r; // pin = 1
    r = r && report_error_(b, ifConditions(b, l + 1));
    r = p && report_error_(b, beginBlock(b, l + 1)) && r;
    r = p && report_error_(b, elseIfBlock_3(b, l + 1)) && r;
    r = p && endBlock(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // instructions*
  private static boolean elseIfBlock_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "elseIfBlock_3")) return false;
    while (true) {
      int c = current_position_(b);
      if (!instructions(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "elseIfBlock_3", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // END_BLOCK
  static boolean endBlock(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "endBlock")) return false;
    if (!nextTokenIs(b, "<End block '}' >", END_BLOCK)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, null, "<End block '}' >");
    r = consumeToken(b, END_BLOCK);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // ENTER beginBlock instructions* endBlock
  public static boolean enterBlock(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enterBlock")) return false;
    if (!nextTokenIs(b, ENTER)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ENTER_BLOCK, null);
    r = consumeToken(b, ENTER);
    p = r; // pin = 1
    r = r && report_error_(b, beginBlock(b, l + 1));
    r = p && report_error_(b, enterBlock_2(b, l + 1)) && r;
    r = p && endBlock(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // instructions*
  private static boolean enterBlock_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enterBlock_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!instructions(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "enterBlock_2", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // EVENT separator eventsDefinition beginBlock instructions* endBlock
  public static boolean eventBlock(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "eventBlock")) return false;
    if (!nextTokenIs(b, EVENT)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, EVENT_BLOCK, null);
    r = consumeToken(b, EVENT);
    p = r; // pin = 1
    r = r && report_error_(b, separator(b, l + 1));
    r = p && report_error_(b, eventsDefinition(b, l + 1)) && r;
    r = p && report_error_(b, beginBlock(b, l + 1)) && r;
    r = p && report_error_(b, eventBlock_4(b, l + 1)) && r;
    r = p && endBlock(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // instructions*
  private static boolean eventBlock_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "eventBlock_4")) return false;
    while (true) {
      int c = current_position_(b);
      if (!instructions(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "eventBlock_4", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // EVENT_NAME (EVENT_NAME_SEPARATOR EVENT_NAME)* | ALL_EVENTS
  public static boolean eventsDefinition(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "eventsDefinition")) return false;
    if (!nextTokenIs(b, "<Events definition>", ALL_EVENTS, EVENT_NAME)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EVENTS_DEFINITION, "<Events definition>");
    r = eventsDefinition_0(b, l + 1);
    if (!r) r = consumeToken(b, ALL_EVENTS);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // EVENT_NAME (EVENT_NAME_SEPARATOR EVENT_NAME)*
  private static boolean eventsDefinition_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "eventsDefinition_0")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = consumeToken(b, EVENT_NAME);
    p = r; // pin = 1
    r = r && eventsDefinition_0_1(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // (EVENT_NAME_SEPARATOR EVENT_NAME)*
  private static boolean eventsDefinition_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "eventsDefinition_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!eventsDefinition_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "eventsDefinition_0_1", c)) break;
    }
    return true;
  }

  // EVENT_NAME_SEPARATOR EVENT_NAME
  private static boolean eventsDefinition_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "eventsDefinition_0_1_0")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = consumeTokens(b, 1, EVENT_NAME_SEPARATOR, EVENT_NAME);
    p = r; // pin = 1
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // EXEC_END
  public static boolean execEndInstruction(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "execEndInstruction")) return false;
    if (!nextTokenIs(b, EXEC_END)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, EXEC_END);
    exit_section_(b, m, EXEC_END_INSTRUCTION, r);
    return r;
  }

  /* ********************************************************** */
  // EXIT beginBlock instructions* endBlock
  public static boolean exitBlock(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "exitBlock")) return false;
    if (!nextTokenIs(b, EXIT)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, EXIT_BLOCK, null);
    r = consumeToken(b, EXIT);
    p = r; // pin = 1
    r = r && report_error_(b, beginBlock(b, l + 1));
    r = p && report_error_(b, exitBlock_2(b, l + 1)) && r;
    r = p && endBlock(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // instructions*
  private static boolean exitBlock_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "exitBlock_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!instructions(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "exitBlock_2", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // GOTO_STATE SEPARATOR stateName (STATE_NAME_SEPARATOR stateName)*
  public static boolean gotoStateInstruction(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "gotoStateInstruction")) return false;
    if (!nextTokenIs(b, GOTO_STATE)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, GOTO_STATE_INSTRUCTION, null);
    r = consumeTokens(b, 1, GOTO_STATE, SEPARATOR);
    p = r; // pin = 1
    r = r && report_error_(b, stateName(b, l + 1));
    r = p && gotoStateInstruction_3(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // (STATE_NAME_SEPARATOR stateName)*
  private static boolean gotoStateInstruction_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "gotoStateInstruction_3")) return false;
    while (true) {
      int c = current_position_(b);
      if (!gotoStateInstruction_3_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "gotoStateInstruction_3", c)) break;
    }
    return true;
  }

  // STATE_NAME_SEPARATOR stateName
  private static boolean gotoStateInstruction_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "gotoStateInstruction_3_0")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = consumeToken(b, STATE_NAME_SEPARATOR);
    p = r; // pin = 1
    r = r && stateName(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // IDENTIFICATION_KEY
  static boolean identificationKey(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "identificationKey")) return false;
    if (!nextTokenIs(b, "<Identification Key>", IDENTIFICATION_KEY)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, null, "<Identification Key>");
    r = consumeToken(b, IDENTIFICATION_KEY);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // IF ifConditions beginBlock instructions* endBlock
  public static boolean ifBlock(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ifBlock")) return false;
    if (!nextTokenIs(b, IF)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, IF_BLOCK, null);
    r = consumeToken(b, IF);
    p = r; // pin = 1
    r = r && report_error_(b, ifConditions(b, l + 1));
    r = p && report_error_(b, beginBlock(b, l + 1)) && r;
    r = p && report_error_(b, ifBlock_3(b, l + 1)) && r;
    r = p && endBlock(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // instructions*
  private static boolean ifBlock_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ifBlock_3")) return false;
    while (true) {
      int c = current_position_(b);
      if (!instructions(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "ifBlock_3", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // BEGIN_PARENTHESE (SML_VARS|CONST_CONDS) ((OP_CONDS|COMP_CONDS) (SML_VARS|CONST_CONDS))* END_PARENTHESE
  public static boolean ifConditions(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ifConditions")) return false;
    if (!nextTokenIs(b, BEGIN_PARENTHESE)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, IF_CONDITIONS, null);
    r = consumeToken(b, BEGIN_PARENTHESE);
    p = r; // pin = 1
    r = r && report_error_(b, ifConditions_1(b, l + 1));
    r = p && report_error_(b, ifConditions_2(b, l + 1)) && r;
    r = p && consumeToken(b, END_PARENTHESE) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // SML_VARS|CONST_CONDS
  private static boolean ifConditions_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ifConditions_1")) return false;
    boolean r;
    r = consumeToken(b, SML_VARS);
    if (!r) r = consumeToken(b, CONST_CONDS);
    return r;
  }

  // ((OP_CONDS|COMP_CONDS) (SML_VARS|CONST_CONDS))*
  private static boolean ifConditions_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ifConditions_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!ifConditions_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "ifConditions_2", c)) break;
    }
    return true;
  }

  // (OP_CONDS|COMP_CONDS) (SML_VARS|CONST_CONDS)
  private static boolean ifConditions_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ifConditions_2_0")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = ifConditions_2_0_0(b, l + 1);
    p = r; // pin = 1
    r = r && ifConditions_2_0_1(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // OP_CONDS|COMP_CONDS
  private static boolean ifConditions_2_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ifConditions_2_0_0")) return false;
    boolean r;
    r = consumeToken(b, OP_CONDS);
    if (!r) r = consumeToken(b, COMP_CONDS);
    return r;
  }

  // SML_VARS|CONST_CONDS
  private static boolean ifConditions_2_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ifConditions_2_0_1")) return false;
    boolean r;
    r = consumeToken(b, SML_VARS);
    if (!r) r = consumeToken(b, CONST_CONDS);
    return r;
  }

  /* ********************************************************** */
  // ifBlock|elseIfBlock|elseBlock|conditionBlock|scriptBlock
  // |(threadStateInstruction
  // |callJavaFunctionInstruction
  // |gotoStateInstruction
  // |processStateInstruction
  // |threadEndInstruction
  // |traceInstruction
  // |execEndInstruction
  // |consumeEventInstruction)
  static boolean instructions(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "instructions")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, null, "<Instructions>");
    r = ifBlock(b, l + 1);
    if (!r) r = elseIfBlock(b, l + 1);
    if (!r) r = elseBlock(b, l + 1);
    if (!r) r = conditionBlock(b, l + 1);
    if (!r) r = scriptBlock(b, l + 1);
    if (!r) r = instructions_5(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // threadStateInstruction
  // |callJavaFunctionInstruction
  // |gotoStateInstruction
  // |processStateInstruction
  // |threadEndInstruction
  // |traceInstruction
  // |execEndInstruction
  // |consumeEventInstruction
  private static boolean instructions_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "instructions_5")) return false;
    boolean r;
    r = threadStateInstruction(b, l + 1);
    if (!r) r = callJavaFunctionInstruction(b, l + 1);
    if (!r) r = gotoStateInstruction(b, l + 1);
    if (!r) r = processStateInstruction(b, l + 1);
    if (!r) r = threadEndInstruction(b, l + 1);
    if (!r) r = traceInstruction(b, l + 1);
    if (!r) r = execEndInstruction(b, l + 1);
    if (!r) r = consumeEventInstruction(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // JAVASCRIPT_CODE+
  public static boolean javascript(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "javascript")) return false;
    if (!nextTokenIs(b, JAVASCRIPT_CODE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, JAVASCRIPT_CODE);
    while (r) {
      int c = current_position_(b);
      if (!consumeToken(b, JAVASCRIPT_CODE)) break;
      if (!empty_element_parsed_guard_(b, "javascript", c)) break;
    }
    exit_section_(b, m, JAVASCRIPT, r);
    return r;
  }
